--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <style type="text/css">
+    #d1{
+      border: 1px solid black;
+    }
+  </style>
   <body>
-    <a>test</a>
+    <div id=d1></div>
   </body>
 </html>
